apps/kube-system/cilium/manifests/hubble/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - hubble.mgmt.sholdee.net
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: hubble-basic-auth
  namespace: kube-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hubble
  basicAuth:
    users:
      name: hubble-basic-auth
